<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/characterDetails"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderURL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/customborder"
            android:text="@string/character_url"
            android:textColor="@android:color/holo_green_light"
            android:textColorHint="?attr/colorBackgroundFloating"/>

        <TextView
            android:id="@+id/characterURL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/customborder"
            android:hint="@string/characterHintUrl"
            android:textColor="@android:color/holo_red_light"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/name"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/nameValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/genderHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/genderValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderCulture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/customborder"
            android:text="@string/cultureHeader"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterCulture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/cultureValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderBorn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/bornHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterBorn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/bornValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderDied"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/diedHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterDied"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/diedValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderTitles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/titlesHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterTitles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/titlesValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderAliases"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/aliasesHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterAliases"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/aliasesValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderFather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/fatherHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterFather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/fatherValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderMother"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/motherHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterMother"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/motherValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderSpouse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/spouseHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterSpouse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/spouseValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderAllegiances"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/customborder"
            android:text="@string/allegiencesHeader"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterAllegiances"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/customborder"
            android:hint="@string/allegiancesValue"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderBooks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/booksHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterBooks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/booksValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderPovBooks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/povbooksHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterPovBooks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/povbooksValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderTvSeries"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/tvseriesHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterTvSeries"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/tvseriesValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/characterHeaderPlayedBy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/playedbyHeader"
            android:background="@drawable/customborder"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/characterPlayedBy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/playedbyValue"
            android:background="@drawable/customborder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_light"/>

    </LinearLayout>
</LinearLayout>